--- a/app/src/main/res/layout/fragment_flight_list.xml
+++ b/app/src/main/res/layout/fragment_flight_list.xml
@@ -1,6 +1,10 @@
 <ListView xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/listview_flight"
-    android:layout_width="match_parent" android:layout_height="match_parent" >
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:layout_marginLeft="10dp"
+    android:layout_marginRight="10dp"
+    >
 
 
 </ListView>
