--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,5 +8,11 @@
     tools:context=".MainActivity">
 
 
-
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="No Internet Connection"
+        android:id="@+id/textView11"
+        android:layout_gravity="center" />
 </FrameLayout>
