--- a/app/src/main/res/values/color.xml
+++ b/app/src/main/res/values/color.xml
@@ -3,4 +3,8 @@
     <color name="primary">#ff3991ff</color>
     <color name="primary_pressed">#ff8d97ff</color>
     <color name="ripple">#ff6764d2</color>
+    <color name="green">#ff00bb76</color>
+    <color name="yellow">#ffe2c349</color>
+    <color name="orange">#ffcc632a</color>
+    <color name="red">#ffcc291a</color>
 </resources>
